5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1575_1334.log
== TEST (2019-03-13 13:33:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/2)

print("Resto: ", //8)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", //8)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:33:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/2)

print("Resto: ", 16//2.5)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  4.0
Resto:  6.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:33:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 8/2)

print("Resto: ", 16//2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  4.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:33:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16//2)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:33:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 12-4)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 16//2)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.202073
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
